[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "pocwatchdog"
version = "0.1.0"
authors = [
  { name="Allen", email="jiangyangcreate@gmail.com" },
]
description = "A pocwatchdog package for security monitoring"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jiangyangcreate/pocwatchdog"
Issues = "https://github.com/jiangyangcreate/pocwatchdog/issues"