[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocwatchdog"
version = "1.1.5"
authors = [
  { name="Allen", email="jiangyangcreate@gmail.com" },
]
description = "A pocwatchdog package for security monitoring"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "schedule>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/jiangyangcreate/pocwatchdog"
Issues = "https://github.com/jiangyangcreate/pocwatchdog/issues"